correction mobile

--- a/src/component/containers/footer/Footer.css
+++ b/src/component/containers/footer/Footer.css
@@ -7,6 +7,7 @@ footer{
     grid-template-rows: 100px 1fr;
     align-items: center;
     justify-items: center;
+    width: 98vw;
 }
 hr{
     display: none;
